# bcdobot

./: Gripper_1.5REALSTL.STL  Gripper_1.5REALSTLalignOriginV3.stl
ruka_config_novy/: CMakeLists.txt  package.xml
ruka_config_novy/config/: cr5_robot.srdf  fake_controllers.yaml  gazebo_cr5_robot.urdf  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
ruka_config_novy/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
ruka_description/urdf/: bunka.urdf  dobot_macro.xacro  gripper_bunka.xacro  gripper_macro.xacro
ruka_goal/: CMakeLists.txt  package.xml
ruka_goal/launch/: gazebo_moveit.launch  test_goal.launch  zistenie_poz.launch
ruka_goal/src/: posli_ruku_niekde.cpp  test_goal.cpp  zistenie_poz.cpp
ruka_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ruka_moveit_config/config/: cr5_robot.srdf  fake_controllers.yaml  gazebo_cr5_robot.urdf  kinematics.yaml  ompl_planning.yaml
ruka_moveit_config/launch/: chomp_planning_pipeline.launch.xml  cr5_robot_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml
ruka_moveit_config_real_gripper/: CMakeLists.txt  package.xml
ruka_moveit_config_real_gripper/config/: cr5_robot.srdf  gazebo_cr5_robot.urdf  joint_limits.yaml
ruka_moveit_config_real_gripper/launch/: chomp_planning_pipeline.launch.xml  cr5_robot_moveit_sensor_manager.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  (+9 more)
wenglor_driver/: CMakeLists.txt  package.xml
(+9 files in other folders)
